@@ -16,6 +16,8 @@ from 2.5.1 to 2.5.2
 - fixing display message showing not alsways in the correct context
 - fixing case inversion leading the cache layer not to be used when
   necessary and used when useless while reading an archive
+- improved heuristic in dar_manager to determin the date a file has been
+  deleted.
 
 from 2.5.0 to 2.5.1
 - fixed display bug in dar_manager met when using -o option and adding
